# MVT_Fermi_Golkhou

./: README.md  README.rst  config_MVT.yaml  config_MVT_fermi.yaml  config_MVT_general.yaml  pypoject.toml  pyproject.toml  setup.py
MVTfermi/: MVT_J1644.py  MVT_realistic_grb.py  MVT_sim copy.py  MVT_sim.py  MVT_sim_back.py  MVT_sim_fun_v3.1.py  MVT_sim_fun_v4.1.py  MVT_sim_fun_v4.2.py  MVT_sim_v2.py  MVT_sim_v3.py  MVT_sim_v4.py  MVT_sim_v4_back.py  MVT_sim_v5.1.py  MVT_sim_v5.2.py  MVT_sim_v5.3.py  MVT_sim_v5.py  SIM_lib.py  TTE_SIM.py  TTE_SIM_v2.py  TTE_SIM_v3.py  __init__.py  analyze_events.py  app.py  app_v0.py  app_v1.py  app_v2.py  combine_compare.py  combine_csv.py  config_MVT.yaml  config_MVT_fermi.yaml  config_mail.yaml  core.py  create_grb_mvt_plot.py  create_measure_MVT_realistic_grb.py  create_measure_MVT_realistic_grb_v2.py  create_measure_MVT_realistic_grb_v3.py  create_realistic_grb.py  evolve_opt_int.py  evolve_opt_res_fermi.py  find_opt_int.py  (+44 more)
MVTfermi/data_rmf/: get_rmf.py  glg_cspec_n0_bn250717158_v01.rsp2  glg_cspec_n1_bn250709653_v01.rsp2  glg_cspec_n1_bn250723551_v01.rsp2  glg_cspec_n2_bn250709653_v01.rsp2  glg_cspec_n2_bn250723551_v01.rsp2  glg_cspec_n3_bn250709653_v01.rsp2  glg_cspec_n3_bn250717158_v01.rsp2  glg_cspec_n3_bn250723551_v01.rsp2  glg_cspec_n6_bn250709653_v01.rsp2  glg_cspec_n6_bn250717158_v01.rsp2  glg_cspec_n9_bn250709653_v01.rsp2  glg_cspec_n9_bn250717158_v01.rsp2  glg_cspec_na_bn250708619_v01.rsp2  glg_cspec_na_bn250718296_v02.rsp2  glg_cspec_na_bn250723551_v01.rsp2
